update hardware design for manufacturing - convert to kicad

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,13 @@
 *.elf
 .tags
 .tags1
+
+.idea
+
+firmware/**/target
+firmware/**/.vscode
+firmware/**/cmake-build-debug
+
 hardware/*bak
 hardware/_autosave*
 
